--- a/BookNote/Java多线程编程核心技术/第7章-拾遗增补.md
+++ b/BookNote/Java多线程编程核心技术/第7章-拾遗增补.md
@@ -105,10 +105,20 @@ private static ThreadLocal<SimpleDateFormat> t1 = new ThreadLocal<SimpleDateForm
 ```
 
 ## 7.5 线程中出现异常的处理
-　　
+　　在 Java 的多线程技术中，可以对多线程中的异常进行“捕捉”，使用的是 UncaughtExceptionHandler 类，从而可以对发送的异常进行有效的处理。
+
+　　方法 setUncaughtExceptionHandler() 的作用是对指定的线程对象设置默认的异常处理器。
+
+　　方法 setUncaughtExceptionHandler() 是给指定线程对象设置的异常处理器。在 Thread 类中还可以使用 setDefaughtExceptionHandler() 方法对所有线程对象设置异常处理器。
+
+　　方法 setDefaultUncaughtExceptionHandler() 的作用是为指定线程类的所有线程对象设置默认的异常处理器。
 
 ## 7.6 线程组内处理异常
-　　
+　　在默认的情况下，线程组中的一个线程出现异常不会影响其他线程的运行。
+
+　　Thread 的 uncaughtException(Thread t,Throwable e) 方法中的 t 参数是出现异常的线程对象。
+
+　　需要注意的是，使用自定义 java.lang.ThreadGroup 线程组，并且重写 uncaughtException 方法处理组内线程中断行为时，每个线程对象中的 run() 方法内部不要有异常 catch 语句，如果有 catch 语句，则 public void uncaughtException(Thread t,Throwable e) 方法不执行。
 
 ## 7.7 线程异常处理的传递
 　　
