多线程书籍阅读完毕

--- a/BookNote/Java多线程编程核心技术/第7章-拾遗增补.md
+++ b/BookNote/Java多线程编程核心技术/第7章-拾遗增补.md
@@ -121,9 +121,23 @@ private static ThreadLocal<SimpleDateFormat> t1 = new ThreadLocal<SimpleDateForm
 　　需要注意的是，使用自定义 java.lang.ThreadGroup 线程组，并且重写 uncaughtException 方法处理组内线程中断行为时，每个线程对象中的 run() 方法内部不要有异常 catch 语句，如果有 catch 语句，则 public void uncaughtException(Thread t,Throwable e) 方法不执行。
 
 ## 7.7 线程异常处理的传递
-　　
+　　测试若干个线程异常处理的方式放在一起运行的情况。
+
+　　ThreadGroup 覆盖实现 uncaughtException(Thread t,Throwable e) 方法，并且调用 Thread 的 setUncaughtExceptionHandler() 与 setDefaultUncaughtExceptionHandler() 方法设置对象与全局的异常处理类。
+
+　　运行一个线程（不设置组），即调用 setUncaughtExceptionHandler() 方法，也调用 setDefaultUncaughtExceptionHandler() 方法出现异常只会回调对象的异常处理（setUncaughtExceptionHandler()）。
+
+　　运行一个线程（不设置组），不调用 setUncaughtExceptionHandler() 方法，只调用 setDefaultUncaughtExceptionHandler() 方法， 则不会回调任何的异常处理。
+
+　　创建一个线程组，将线程加入到线程组中，并且调用 Thread 的 setUncaughtExceptionHandler() 与 setDefaultUncaughtExceptionHandler()方法，线程异常则调用对象的异常处理（setUncaughtExceptionHandler()）。
+
+　　创建一个线程组，将线程加入到线程组中，只调用 Thread 的 setDefaultUncaughtExceptionHandler()方法，线程异常则调用全局的异常处理（setDefaultUncaughtExceptionHandler()）。
+
+　　创建一个线程组，将线程加入到线程组中，不调用 Thread 的 setUncaughtExceptionHandler() 与 setDefaultUncaughtExceptionHandler()方法，，线程异常则调用线程组的异常处理（ThreadGroup::uncaughtException(Thread t,Throwable e)）。
+
+　　如果想要打印“静态的异常处理”的信息，则必须在 public void uncaughtException(Thread t,Throwable e)方法中加上 super.uncaughtException(t,e);代码。
 
 ## 7.8 本章总结
-　　
+　　本章弥补了前面几个章节遗漏的技术空白点。
 
 
