修复模糊的图

--- a/BookNote/Java多线程编程核心技术/第3章-线程间通信.md
+++ b/BookNote/Java多线程编程核心技术/第3章-线程间通信.md
@@ -211,5 +211,5 @@
 　　但在使用 InheritableThreadLocal 类需要注意一点的是，如果子线程在取得值的同时，主线程将 InheritableThreadLocal 中的值进行更改，那么子线程取到的值还是旧值。
 
 ## 3.5 本章总结
-
+　　可以将分散的线程对象进行批次的通信与协作。对任务的计划规划更加合理，不再是随机的和盲目的了。
 
