计划9月任务

--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -160,6 +160,14 @@
 	4. 继续绘画
 
 * 完成
+	1. 视频编辑应用继续完成中。
+	2. 《Java多线程编程核心技术》书籍阅读完毕。
+	3. 读书笔记上传。
+	4. 绘画总计17副。
 
-
+#### 2019 年 9 月
+* 计划
+	1. 本月主要任务完成视频编辑应用。
+	2. 视频编辑应用实现文章输出。
+	3. 绘画。
 
