--- a/项目信息/剪辑助理项目/第四天：本地视频列表显示.md
+++ b/项目信息/剪辑助理项目/第四天：本地视频列表显示.md
@@ -237,8 +237,24 @@ public class LocalVideoListAdapter extends BaseAdapter {
 ## 4.完善
 　　在写列表显示的时候发现忘记写没有视频的显示了，所以在布局上加上了一个文本提示，当视频列表为空时，显示提醒。
 ```
-
-``
+    <TextView
+        android:id="@+id/activity_local_video_empty_video_tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_local_video"
+        android:textColor="@android:color/white"
+        android:textSize="20sp"
+        android:visibility="gone" />
+```
+　　逻辑处理：
+```
+        if (localVideoBeanList == null || localVideoBeanList.size() < 1) {
+         	//没有本地视频数据，显示提示
+		 	tv_emptyVideo.setVisibility(View.VISIBLE);
+        } else {
+            //有本地视频数据，将数据显示在列表中
+```
 
 ## 总结
 　　今天就写这么多，本地视频的列表就写好了，接下来就要写视频的播放了。
