--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -171,3 +171,38 @@
 	2. 视频编辑应用实现文章输出。
 	3. 绘画。
 
+* 完成
+	1. 视频编辑应用未完成。
+	2. 视频编辑应用实现文章有输出。
+	3. 绘画总计 副。
+
+#### 2019 年 9 月
+* 计划
+	1. 完成视频编辑应用。
+	2. 视频编辑应用实现文章输出。
+	3. 绘画。
+	4. 技术文档查看学习输出。
+	5. 更新简历。
+	6. 技术书籍阅读。
+
+* 完成
+	1. 
+	2. 
+	3. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
