--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -58,6 +58,47 @@
 
 1. 《程序员修炼之道》
 
+#### 盘点需要做的事情（详细）
+
+1. 视频编辑应用完成。
+2. ContentProvider
+3. Handle、Message、Looper
+4. Binder
+5. Intent
+6. Glide
+7. OkHTTP
+8. Retrofit
+9. RxJava
+10. XWalkView
+11. Fragment
+12. HTTPS
+13. HTTP
+14. TCP与UDP
+15. Socket
+13. 链表
+14. 树
+14. 排序算法
+15. 哈希表
+16. 动态规划
+17. 线程
+18. volatile
+19. threadLocal原理
+20. synchronized
+21. hashMap 、hashCode、arrayMap、treeMap
+22. LRUCache
+23. ArrayList 、 LinkedList
+24. Collection、Collections
+15. 插件化 - 看书
+16. 热修复 - 看书
+17. Kotlin
+18. Flutter
+19. 单例模式
+20. 工厂模式
+21. 观察者模式
+22. 多渠道打包
+
+
+
 ## 月计划
 
 ## 2019 年 1 月
@@ -176,7 +217,7 @@
 	2. 视频编辑应用实现文章有输出。
 	3. 绘画总计 副。
 
-#### 2019 年 9 月
+#### 2019 年 10 月
 * 计划
 	1. 完成视频编辑应用。
 	2. 视频编辑应用实现文章输出。
@@ -189,7 +230,6 @@
 	1. 
 	2. 
 	3. 
-
 
 
 
