--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -87,7 +87,7 @@
 21. hashMap 、hashCode、arrayMap、treeMap
 22. LRUCache
 23. ArrayList 、 LinkedList
-24. Collection、Collections
+24. Collection、Collections - 整理中
 15. 插件化 - 看书
 16. 热修复 - 看书
 17. Kotlin
