--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -67,7 +67,7 @@
 5. Intent
 6. Glide
 7. OkHTTP
-8. Retrofit
+8. Retrofit - 进行中
 9. RxJava
 10. XWalkView
 11. Fragment
@@ -87,15 +87,15 @@
 21. hashMap 、hashCode、arrayMap、treeMap
 22. LRUCache
 23. ArrayList 、 LinkedList
-24. Collection、Collections - 整理中
-15. 插件化 - 看书
-16. 热修复 - 看书
-17. Kotlin
-18. Flutter
-19. 单例模式
-20. 工厂模式
-21. 观察者模式
-22. 多渠道打包
+25. 插件化 - 看书
+26. 热修复 - 看书
+27. Kotlin
+28. Flutter
+29. 单例模式
+30. 工厂模式
+31. 观察者模式
+32. 多渠道打包
+24. Collection、Collections - 已完成
 
 
 
