--- a/other/资源.md
+++ b/other/资源.md
@@ -228,11 +228,11 @@
 
 Android核心技术
 
-- 一、Android核心基础_15天精讲精练 https://pan.baidu.com/s/1b86u2E
+- 一、Android核心基础_15天精讲精练 https://pan.baidu.com/s/1b86u2E - 资源不存在
 - 二、Android自定义控件视频 https://pan.baidu.com/s/1hrOVZd6
 - 三、Android—JNI视频 http://pan.baidu.com/s/1kVqBCmr
 - 四、Android与H5互调 https://pan.baidu.com/s/1miHaDbM
-- 五、Android常用第三方框架源码分析 http://pan.baidu.com/s/1o789Vjc
+- 五、Android常用第三方框架源码分析 http://pan.baidu.com/s/1o789Vjc - 资源不存在
 - 六、尚硅谷Android视频《多渠道打包》 http://pan.baidu.com/s/1dEVpQyX
 
 ## Android项目实战 ##
@@ -255,7 +255,7 @@ Android核心技术
 - 八、Android_EventBus http://pan.baidu.com/s/1qXYTyA4
 - 九、Android_ImageLoader http://pan.baidu.com/s/1o7DsPmy
 - 十、Android_Picasso http://pan.baidu.com/s/1c1JITo8
-- 十一、Android_Glide http://pan.baidu.com/s/1hswlhu0
+- 十一、Android_Glide http://pan.baidu.com/s/1hswlhu0 - 资源不存在
 - 十二、Android_Fresco http://pan.baidu.com/s/1qXHtwdA
 - 十三、Android_RecyclerView http://pan.baidu.com/s/1kVjTLJ5
 - 十四、Android_Pulltorefresh http://pan.baidu.com/s/1c20xVm4
