--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -25,6 +25,8 @@ Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 
 8.https://github.com/xufuji456/FFmpegAndroid 音视频编解码
 
+9.https://blog.csdn.net/qqchenjian318/article/details/78396428 Android 视频编辑器1-5 好好看一下
+
 ## 音频
 
 
