--- a/Algorithm/动态规划.md
+++ b/Algorithm/动态规划.md
@@ -1,6 +1,81 @@
 # 动态规划（Dynamic Programming）
 
+动态规划（dynamic programming,DP）：将一个问题拆成几个字问题，分别求解这些子问题，即可推断出大问题的解。
+
+## 几个简单的概念
+
+#### 无后效性
+“未来与过去无关”，这就是无后效性。
+严格定义：如果给定某一阶段的状态，则在这一阶段以后过程的发展不受这阶段以前各阶段状态的影响。
+
+## 最优子结构
+大问题的最优解可以由小问题的最优解推出，这个性质叫做“最优子结构性质”。
+
+如果判断一个问题能否使用 DP 解决呢？能将大问题拆成几个小问题，且满足无后效性、最优子结构性质。
+
+## DP 的典型应用：DAG 最短路
+问题：给定一个城市的地图，所有的道路都是单行道，而且不会构成环。每条道路都有过路费，问从 S 点到 T 点花费的最少费用。
+![](./最短路图.jpg)
+
+先试着记从 S 到 T 的最少费用为 f(T)。
+
+想要到 T ，要么经过 C，要么经过 D,从而 f(T) = min{f(C)+20,f(D)+10}。
+
+检验此问题是否符合两个性质：
+1. 无后效性：对于点 P，一旦 f(P) 确定，以后就只关心 f(P) 的值，不关心怎么去的。
+2. 最优子结构：对于 P，只关心到 P 的最小费用，即 f(P) 。如果从 S 走到 T 是 S -> P -> Q -> T，那么 S 走到 Q 的最优路径是 S -> P -> Q。对一条最优的路径而言，从 S 走到沿途所有的点（子问题）的最优路径，都是这条大路的一部分。这个问题的最优子结构性质是显然的。
+
+既然这两个性质都满足，那么此问题就可以使用 DP 来解决。公式就是：f(P) = min{f(R) + W(R->P)}，其中 R 为有路遇到 P 的所有的点，W(R->P) 为 R 到 P 的过路费。
+
+## 对 DP 原理的一些讨论
+
+#### DP 的核心思想
+DP 为什么会快？无论是 DP 还是暴力，算法都是在可能解空间内，寻找最优解。
+
+暴力的最发就是枚举所有的可能解，这是最大的可能解空间，DP 是枚举有可能成为答案的解。这个空间比暴力小得多。
+
+也就是说：DP 自带剪刀。DP 舍弃了一大堆不可能称为最优解的答案。
+
+所以 DP 的核心思想：尽量缩小可能解空间。
+
+在暴力算法中，可能解空间往往是指数级的大小；如果采用 DP ，那么有可能把解空间的大小降到多项式级。
+
+一般来说，解空间越小，寻找解就越快。这样就完成了优化。
+
+#### DP 的操作过程
+一言以蔽之：大事化小，小事化了。
+
+将一个大问题转化成几个小问题：求解小问题；推出大问题的解。
+
+#### 如何设计 DP 算法
+比较通用的设计 DP 算法的步骤：
+首先，把面对的局面表示为 x 。这一步称为设计状态。
+对于状态 x，记要求出的答案为 f(x)，目标是求出 f(x)。
+找出 f(x) 与那些局面有关（记为 p），写出一个式子（称为状态转移方程），通过 f(p) 来推出 f(x)。
+
+#### DP 三连
+设计 DP 算法，往往可以遵循 DP 三连：
+我是谁？--设计状态，表示局面
+我从哪里来？
+我要到哪里去？--设计转移
+
+设计状态式 DP 的基础。解下来的设计转移，有两种方式：一种是考虑我从哪里来；另一种是考虑我到哪里去，这常见于求出 f(x) 之后，更能从 x 走到的一些解。
+
+总而言之，“我从哪里来”和“我要到哪里去”只需要考虑清除其中一个，就能设计出状态转移方程，从而写代码求解问题。前者又称 pull 型的转移，后者又称 push 型的转移。
+ 
+
 ## 参考资源
 [什么是动态规划（Dynamic Programming）？动态规划的意义是什么？](https://www.zhihu.com/question/23995189/answer/613096905?from=timeline&hb_wx_block=0&utm_medium=social&utm_oi=28170849878016&utm_source=wechat_session&s_r=0)
+
+
+
+
+
+
+
+
+
+
+
 
 
