--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -27,6 +27,10 @@ Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 
 9.https://blog.csdn.net/qqchenjian318/article/details/78396428 Android 视频编辑器1-5 好好看一下
 
+10.https://www.jianshu.com/p/821c45005ab0 Android 音视频开发入门指南
+
+11.https://blog.csdn.net/ShareUs/article/details/79957614 Android 音视频开发入门指南，进阶研究
+
 ## 音频
 
 
