--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -79,7 +79,6 @@
 14. 树
 14. 排序算法
 15. 哈希表
-16. 动态规划 - 已完成
 17. 线程
 18. volatile
 19. threadLocal原理
@@ -91,11 +90,15 @@
 26. 热修复 - 看书
 27. Kotlin
 28. Flutter
-29. 单例模式
-30. 工厂模式
-31. 观察者模式
 32. 多渠道打包
+34. 代理模式
+
+29. 单例模式 - 已完成
+30. 工厂模式 - 已完成
+31. 观察者模式 - 已完成
 24. Collection、Collections - 已完成
+16. 动态规划 - 已完成
+33. 适配器模式 - 已完成
 
 
 
