--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -85,13 +85,13 @@
 20. synchronized
 21. hashMap 、hashCode、arrayMap、treeMap
 22. LRUCache
-23. ArrayList 、 LinkedList
 25. 插件化 - 看书
 26. 热修复 - 看书
 27. Kotlin
 28. Flutter
 32. 多渠道打包
 34. 代理模式
+35. Camera 知识
 
 29. 单例模式 - 已完成
 30. 工厂模式 - 已完成
@@ -99,7 +99,7 @@
 24. Collection、Collections - 已完成
 16. 动态规划 - 已完成
 33. 适配器模式 - 已完成
-
+23. ArrayList 、 LinkedList - 已完成
 
 
 ## 月计划
