--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -89,9 +89,8 @@
 26. 热修复 - 看书
 27. Kotlin
 28. Flutter
-32. 多渠道打包
 34. 代理模式
-35. Camera 知识
+35. Camera 知识 - 进行中
 
 29. 单例模式 - 已完成
 30. 工厂模式 - 已完成
@@ -100,7 +99,7 @@
 16. 动态规划 - 已完成
 33. 适配器模式 - 已完成
 23. ArrayList 、 LinkedList - 已完成
-
+32. 多渠道打包 - 已完成
 
 ## 月计划
 
