插件化数据阅读

--- a/BookNote/Android插件化开发指南/第1章-插件化技术的昨天、今天与明天.md
+++ b/BookNote/Android插件化开发指南/第1章-插件化技术的昨天、今天与明天.md
@@ -18,5 +18,21 @@
 　　Android 插件话，不需要用户重新下载 App，分分钟就能享受到插件新的版本，方便的修复 bug；另一方面，如果要和竞争对手抢占市场，那么谁发布新功能越快越多，对市场对用户的占用率就越高。
 
 ## 1.3 插件化技术的历史
+　　2012 年 7 月 27 日，是 Android 插件化技术的第一个里程碑。大众点评的屠毅敏，发布了第一个 Android 插件话开源项目 AndroidDynamicLoader。这是基于 Fragment 来实现的一个插件化框架。通过动态加载插件化中的 Fragment，来实现页面的切换，而 Activity 作为 Fragment 的容器只有一个。 
+
+　　2013 年，出现了 23Code。23Code 提供了一个壳，在这个壳里可以动态下载插件，然后动态运行。我们可以在壳外编写各种各样的控件，在这个框架下运行。
+
+　　2013 年 3 月 27 日，第 16 期阿里技术沙龙，淘宝客户端的伯奎做了一个技术分享，专门讲淘宝的 Atlas 插件化框架，包括 ActivityThread 那几个类的 Hook、增量更新、降级兼容等技术。
+
+　　2014 年 3 月 30 日 8 点 20 分，是 Android 插件化的第二个里程碑。任玉刚开源了一个 Android 插件化项目 dynamic-load-apk，这与后续介绍的很多插件化项目都不太一样，它没有对 Android 系统的底层方法进行 Hook，而是从上层，也就是 App 应用层解决问题----通过创建了一个 ProxyActivity 类，由它来进行分发，启动相应的插件 Activity。
+
+　　张涛在 2014 年 5 月发布了插件化框架 CJFrameForAndroid。它的设计思想和 that 框架差不多，只是把 ProxyActivity 和 ProxyService 称为托管所。
+
+
+
+
+
+
+
 
 
