--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -7,7 +7,7 @@
 	* 《代码整洁之道》
 	* 《程序员修炼之道》
 	* 《深入理解 Android 卷一》
-	* 《 Java 多线程编程核心技术》
+	* 《 Java 多线程编程核心技术》（完成）
 	* 《图解 HTTP 》
 	* 重读 《 Android 开发艺术探索》
 	* 《 Android 进阶之光》
@@ -85,8 +85,8 @@
 20. synchronized
 21. hashMap 、hashCode、arrayMap、treeMap
 22. LRUCache
-25. 插件化 - 看书
-26. 热修复 - 看书
+25. 插件化 - 先看技术博客。看书
+26. 热修复 - 先看技术博客。看书
 27. Kotlin
 28. Flutter
 34. 代理模式
@@ -229,9 +229,19 @@
 	6. 技术书籍阅读。
 
 * 完成
-	1. 
-	2. 
-	3. 
+	1. 找了视频文章查看，决定将项目分割进行完成，先查看需要完成的功能，然后查阅相关知识，然后完成功能。当前在看 Camera 的知识，准备完成相机预览功能。
+	2. 绘画一副。
+	3. 技术书籍在散度。
+	4. 知识文章持续积累。
+	5. 对接下来的知识整理成列表，速度完成相关知识复习加积累。
+
+
+#### 2019 年 11 月
+* 计划
+	1. 完成视频编辑应用。
+	2. 视频编辑知识文章输出。
+	3. 绘画。
+	4. 知识列表持续完成。
 
 
 
