--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -89,9 +89,11 @@
 26. 热修复 - 先看技术博客。看书
 27. Kotlin
 28. Flutter
-34. 代理模式
-35. Camera 知识 - 进行中
+36. SurfaceView
 
+
+34. 代理模式 - 已完成
+35. Camera 知识 - 已完成
 29. 单例模式 - 已完成
 30. 工厂模式 - 已完成
 31. 观察者模式 - 已完成
