--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -60,7 +60,7 @@
 
 #### 盘点需要做的事情（详细）
 
-1. 视频编辑应用完成。
+1. **视频编辑应用 - 进行中 **
 2. ContentProvider
 3. Handle、Message、Looper
 4. Binder
@@ -72,7 +72,7 @@
 10. XWalkView
 11. Fragment
 12. HTTPS
-13. HTTP
+13. **HTTP - 进行中**
 14. TCP与UDP
 15. Socket
 13. 链表
@@ -89,7 +89,7 @@
 26. 热修复 - 先看技术博客。看书
 27. Kotlin
 28. Flutter
-36. SurfaceView
+36. **SurfaceView - 进行中**
 
 
 34. 代理模式 - 已完成
