--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -72,7 +72,6 @@
 10. XWalkView
 11. Fragment
 12. HTTPS
-13. **HTTP - 进行中**
 14. TCP与UDP
 15. Socket
 13. 链表
@@ -102,6 +101,34 @@
 33. 适配器模式 - 已完成
 23. ArrayList 、 LinkedList - 已完成
 32. 多渠道打包 - 已完成
+13. HTTP - 已完成 2019.11.10
+
+**需要整理复习的资料**
+1. [Acitivity]()
+2. Service
+3. BroadcaseReceive
+4. 单元测试
+5. Handler
+6. IntentFilter 的匹配规则
+7. 设计模式的选择
+8. [Activity的布局绘制过程](https://github.com/ZhangMiao147/android_learning_notes/blob/master/Android/view/Activity%E7%9A%84%E5%B8%83%E5%B1%80%E7%BB%98%E5%88%B6%E8%BF%87%E7%A8%8B.md)
+9. [View 绘制流程](https://github.com/ZhangMiao147/android_learning_notes/blob/master/Android/view/View%E7%BB%98%E5%88%B6%E6%B5%81%E7%A8%8B.md)
+10.[视图状态与重绘流程](https://github.com/ZhangMiao147/android_learning_notes/blob/master/Android/view/%E8%A7%86%E5%9B%BE%E7%8A%B6%E6%80%81%E4%B8%8E%E9%87%8D%E7%BB%98%E6%B5%81%E7%A8%8B.md)
+11.[ArrayList 与 LinkedList](https://github.com/ZhangMiao147/android_learning_notes/blob/master/Java/ArrayList%E4%B8%8ELinkedList.md)
+12.[Collection 与 Collections](https://github.com/ZhangMiao147/android_learning_notes/blob/master/Java/Colletion%E4%B8%8EColletions.md)
+13.[动态规划](https://github.com/ZhangMiao147/android_learning_notes/blob/master/Algorithm/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92.md)
+14.[多渠道打包](https://github.com/ZhangMiao147/android_learning_notes/blob/master/Android/Software/%E5%A4%9A%E6%B8%A0%E9%81%93%E6%89%93%E5%8C%85.md)
+15.[UML 类图](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/UML%E7%B1%BB%E5%9B%BE.md)
+16.[简单工厂模式](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/%E7%AE%80%E5%8D%95%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F.md)
+17.[工厂方法模式](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/%E5%B7%A5%E5%8E%82%E6%96%B9%E6%B3%95%E6%A8%A1%E5%BC%8F.md)
+18.[抽象工厂模式](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F/%E6%8A%BD%E8%B1%A1%E5%B7%A5%E5%8E%82%E6%A8%A1%E5%BC%8F.md)
+19.[单例模式](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F/%E5%8D%95%E4%BE%8B%E6%A8%A1%E5%BC%8F.md)
+20.[适配器模式](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/%E9%80%82%E9%85%8D%E5%99%A8%E6%A8%A1%E5%BC%8F/%E9%80%82%E9%85%8D%E5%99%A8%E6%A8%A1%E5%BC%8F.md)
+21.[代理模式](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/%E4%BB%A3%E7%90%86%E6%A8%A1%E5%BC%8F/%E4%BB%A3%E7%90%86%E6%A8%A1%E5%BC%8F.md)
+22.[观察者模式](https://github.com/ZhangMiao147/android_learning_notes/blob/master/DesignPatterns/%E8%A7%82%E5%AF%9F%E8%80%85%E6%A8%A1%E5%BC%8F/%E8%A7%82%E5%AF%9F%E8%80%85%E6%A8%A1%E5%BC%8F.md)
+23.[Camera知识](https://github.com/ZhangMiao147/android_learning_notes/blob/master/MultiMedia/Camera/Camera.md)
+24.[Camera2知识](https://github.com/ZhangMiao147/android_learning_notes/blob/master/MultiMedia/Camera/Camera2.md)
+25.[HTTP](https://github.com/ZhangMiao147/android_learning_notes/blob/master/network/HTTP/HTTP.md)
 
 ## 月计划
 
