--- a/network/计算机网络基础知识.md
+++ b/network/计算机网络基础知识.md
@@ -3,7 +3,17 @@
 ## 
 　　
 
+## 网络时延
+　　RTT(Round-Trip Time)：往返时延，在计算机网络中它是一个重要的性能指标，它表示从发送端发送数据开始，到发送端收到来自接收端的确认（接收端收到数据后便立即发送确认），总共经历的时延。
+
+　　通常，时延由发送时延、传播时延、排队时延、处理时延四个部分组成。
+
+（1）发送时延
+
+　　发送时延是节点将数据分组发送到传播媒介所需要的时间，也就是从分组的第一个比特开始发送算起，到最后一个比特发送完毕所需要的时间。显然，发送时延与网络接口 / 信道的传输速率成反比，与数组分组的长度成正比。
+
 
 ## 参考文章
 [计算机网络基础知识总结](https://www.runoob.com/w3cnote/summary-of-network.html)
 [Socket学习网络基本准备](https://www.runoob.com/w3cnote/android-tutorial-socket-intro.html)
+[什么是RTT？计算机网络里的东西](https://zhidao.baidu.com/question/58798218.html)
