--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -82,14 +82,16 @@
 18. volatile
 19. threadLocal原理
 20. synchronized
-21. hashMap 、hashCode、arrayMap、treeMap
-22. LRUCache
-25. 插件化 - 先看技术博客。看书
-26. 热修复 - 先看技术博客。看书
-27. Kotlin
-28. Flutter
-36. **SurfaceView - 进行中**
-37. 计算机网络知识基础
+23. hashCode、
+24. arrayMap、
+25. treeMap
+26. LRUCache
+27. 插件化 - 先看技术博客。看书
+28. 热修复 - 先看技术博客。看书
+29. Kotlin
+30. Flutter
+31. **SurfaceView - 进行中**
+32. 计算机网络知识基础
 
 
 34. 代理模式 - 已完成
@@ -103,6 +105,7 @@
 23. ArrayList 、 LinkedList - 已完成
 32. 多渠道打包 - 已完成
 13. HTTP - 已完成 2019.11.13
+45.  hashMap  已完成
 
 **需要整理复习的资料**
 25. [HTTP](https://github.com/ZhangMiao147/android_learning_notes/blob/master/network/HTTP/HTTP.md) 2019.11.13
