--- a/项目信息/项目信息收集.md
+++ b/项目信息/项目信息收集.md
@@ -25,11 +25,13 @@ Android 音视频系列：视频容器操作篇--mp4 容器打包实现
 
 8.https://github.com/xufuji456/FFmpegAndroid 音视频编解码
 
-9.https://blog.csdn.net/qqchenjian318/article/details/78396428 Android 视频编辑器1-5 好好看一下
+9.https://blog.csdn.net/qqchenjian318/article/details/77396653  Android 视频编辑器1-5 好好看一下
 
 10.https://www.jianshu.com/p/821c45005ab0 Android 音视频开发入门指南
 
 11.https://blog.csdn.net/ShareUs/article/details/79957614 Android 音视频开发入门指南，进阶研究
+
+12. [https://www.polarxiong.com/archives/Android%E7%9B%B8%E6%9C%BA%E5%BC%80%E5%8F%91-%E4%BA%94-%E8%A7%A6%E6%91%B8%E5%AF%B9%E7%84%A6-%E8%A7%A6%E6%91%B8%E6%B5%8B%E5%85%89-%E4%BA%8C%E6%8C%87%E6%89%8B%E5%8A%BF%E7%BC%A9%E6%94%BE.html](https://www.polarxiong.com/archives/Android相机开发-五-触摸对焦-触摸测光-二指手势缩放.html)  相机开发
 
 ## 音频
 
