--- a/other/2019年计划.md
+++ b/other/2019年计划.md
@@ -90,8 +90,9 @@
 28. 热修复 - 先看技术博客。看书
 29. Kotlin
 30. Flutter
-31. **SurfaceView - 进行中**
-32. 计算机网络知识基础
+31. RabbitMQ
+32. **SurfaceView - 进行中**
+33. 计算机网络知识基础
 
 
 34. 代理模式 - 已完成
