--- a/Android/Software/多渠道打包.md
+++ b/Android/Software/多渠道打包.md
@@ -4,20 +4,24 @@
 　　打包就是根据签名和其他标识生成安装包。
 
 #### 什么是签名？
-1.在 android 应用文件（apk）钟保存的一个特别字符串。
+1.在 android 应用文件（apk）中保存的一个特别字符串。
+
 2.用来标识不同的应用开发者。
+
 3.一个应用开发者开发的多款应用使用同一个签名。
 
 #### 为什么要签名？
 **原因1：**最简单直接的回答：系统要求的。
+
 　　Android 系统要求每一个 Android 应用程序必须要经过数字签名才能够安装到系统中，也就是说如果一个 Android 应用程序没有经过数字签名，是没有办法安装到系统中的。
 
 **原因2：**不同程序员开发的应用包名可能会相同，导致一个应用覆盖掉另一个应用。
+
 　　如果只是包名的概念，那么如果 B 应用与已经安装的 A 应用包名一样，那就实现覆盖，不合理。
 
-　　而事实上是装不上 B 的，它会提示，存在报名一致，但签名不一样的，这就不会覆盖。
+　　而事实上是装不上 B 的，它会提示，存在包名一致，但签名不一样的，这就不会覆盖。
 
-　　debug.keystore -- 默认签名文件，不能上架。不同电脑使用此文件生成的签名不一样。
+　　**debug.keystore** -- 默认签名文件，不能上架。不同电脑使用此文件生成的签名不一样。
 
 #### 什么是多渠道包？
 　　渠道包就是要在安装包中添加渠道信息，也就是 channel，对应不同的渠道，例如：小米市场、360市场、应用宝市场等。
@@ -38,14 +42,17 @@
 　　现在 Android 的构建工具换成了 gradle ，通过 gradle ，简单配置后就可以实现自动打所有渠道包。
 
 #### 友盟打包实现步骤
-1.按照 umeng 的要求，manifest 文件中需要有
+1. 按照 umeng 的要求，manifest 文件中需要有
+
 ```
 <meta-data
  android:name="UMENG_CHANNEL"
  android:value="${UMENG_CHANNEL_VALUE}" />
 ```
 　　这段配置，value 那里就是 wandoujia 、360 之类的渠道名称，但是我们在这里不会去写渠道名，写的是一个占位符，后面gradle 编译的时候会动态的替换掉它。
-2，在 module（一般也就是 app）的 build.gradle 的android{} 中添加如下内容：
+
+2. 在 module（一般也就是 app）的 build.gradle 的android{} 中添加如下内容：
+
 ```
 productFlavors{
           wandoujia{
@@ -58,8 +65,8 @@ productFlavors{
 ```
 　　productFlavors 是 android 节点的一个自节点。你需要打什么渠道的包，就在这里按 umeng 的要求用渠道名给 UMENG_CHANNEL_VALUE 赋值。
 
+3. 优化1：上面只是两个渠道，如果有几十个渠道，都这样写，重复的东西太多，观察到每个渠道就是 flavor 的名称，所以修改如下：
 
-3.优化1：上面只是两个渠道，如果有几十个渠道，都这样写，重复的东西太多，观察到每个渠道就是 flavor 的名称，所以修改如下：
 ```
 productFlavors{
   wandoujia{
@@ -74,7 +81,8 @@ productFlavors{
  }
 ```
 
-3.优化2：上面经过签名打包后生成的 apk 的名称是有默认命名规则的，如：xxx-xiaomi-release.apk 但是我们想包含版本信息如：xxx-xiaomi-release-1.0.apk ,所以最终打包脚本如下：
+4. 优化2：上面经过签名打包后生成的 apk 的名称是有默认命名规则的，如：xxx-xiaomi-release.apk 但是我们想包含版本信息如：xxx-xiaomi-release-1.0.apk ,所以最终打包脚本如下：
+
 ```
 productFlavors{
     wandoujia{
@@ -98,8 +106,10 @@ productFlavors{
  }
 ```
 
-4.获取渠道
+5. 获取渠道
+
 　　在代码中我们可以通过读取 mate-data 信息来获取渠道，然后添加到请求参数中，获取方法如下：
+
 ```
 private String getChannel() {
    try {
@@ -111,7 +121,7 @@ private String getChannel() {
    return "";
 }
 ```
-5.执行签名打包：
+6. 执行签名打包：
 
 　　这时候你去 app/build/outputs/apk 中就能看到自动打好的渠道包了。
 
@@ -125,16 +135,22 @@ private String getChannel() {
 
 #### 方法
 　　已经将美团的打包工具放到了 tools 下的 test01 文件中：
+
 1.将要打包的 apk 放到 PythonTool 中。
+
 2.在 PythonTool/info/channel.txt 中写入需要的渠道，一个渠道占一行。
-3.双击执行 PythonTool/MultiChannelBuildTool.py 文件（需要 Python 环境），就会生成渠道包
+
+3.双击执行 PythonTool/MultiChannelBuildTool.py 文件（需要 Python 环境），就会生成渠道包。
+
 4.获取渠道信息：将 JavaUtil 文件中的 ChannelUtil.java 拷贝到工程，调用 ChannelUtil.getChannel 即可获取渠道。
 
 #### 优缺点
 **优点：**
+
 　　这种打包方式速度非常快，900多个渠道不到一分钟就能打完
 
 **缺点：**
+
 1.google 如果哪天更改打包规则，使得在 META-INF 中建立空文件还需要重新打包，这种方式将不可用。
 
 2.一些不法的渠道商很容易通过工具修改渠道，如果一个渠道商，通过网络劫持和篡改渠道的组合方式来获取暴利，对于程序开发者来说可能会存在着巨大的经济损失。
@@ -142,21 +158,28 @@ private String getChannel() {
 ## 360多渠道打包
 
 #### 原理
-　　apk 文件本质就是 zip 文件,利用 zip 文件“可以添加comment（摘要）”的数据结构特点，在文件的末尾写入任意数据，而不用重新解压zip文件，我们就可以将渠道信息写入摘要区
+　　apk 文件本质就是 zip 文件，利用 zip 文件“可以添加comment（摘要）”的数据结构特点，在文件的末尾写入任意数据，而不用重新解压zip文件，我们就可以将渠道信息写入摘要区。
 
 #### 用法
 　　已经将 360 多渠道打包工具放入了 tools 的 test02 文件中。
 
 1.将要写入渠道信息的 apk 放入 MCPTool 文件夹中。
+
 2.修改 MCPTool.bat 批处理文件，更改渠道和密码（渠道信息为了安全需要加密）。
+
 3.将 apk 拖到 MCPTool.bat 上执行，将会生成渠道包。
+
 4.修改 MCPTool-check.bat 中的密码和 MCPTool.bat 中的密码一致。
+
 5.将渠道包拖到 MCPTool-check.bat 上执行，就可以检查渠道信息是否正确。
+
 6.获取渠道：将 MCPTool.java 添加到工程或者将 MCPTool.jar 导入工程，调用 MCPTool.getChannelId(this,"12345678","")  第一个参数为 context ，第二个是密码，第三个是默认值。
 
 #### 优缺点
 **优点:**
+
 1.5M 的 apk，1 秒种能打 300 个。
+
 2.在下载 apk 的同时，服务端可以写入一些信息，例如邀请码，分享信息等。
 
 **缺点:**
