更新读书笔记

--- a/BookNote/设计模式之禅/第4章-接口隔离原则.md
+++ b/BookNote/设计模式之禅/第4章-接口隔离原则.md
@@ -3,7 +3,13 @@
 ## 4.1 接口隔离原则的定义
 　　接口分为两种：
 
+1. 实例接口（Object Interface），在 Java 中声明一个类，然后用 new 关键字产生一个实例，它是对一个类型的事物的描述。这是一个接口。`Person zhangSan  = new Person()`，Person 类就是 zhangSan 的接口。Java 中类也是一种接口。
 
+2. 类接口（Class Interface），Java 中经常使用的 interface 关键字定义的接口。
+
+　　隔离：建立单一接口，不要建立臃肿庞大的接口。通俗讲就是：接口尽量细化，同时接口中的方法尽量少。
+
+　　接口隔离原则与单一职责的不同：接口隔离原则与单一职责的审视角度不相同，单一职责要求的是类和接口职责单一，注重的是职责，这是业务逻辑上的划分，而接口隔离原则要求接口的方法尽量少。
 
 ## 4.2 美女何其多，观点各不同
 
