--- a/Android/view/view的实践/系统控件的常用使用.md
+++ b/Android/view/view的实践/系统控件的常用使用.md
@@ -1,29 +1,29 @@
 # 系统控件的常用使用
 
-## ScrollView
+## 1. ScrollView
 
-#### 1. ScrollView 显示不在顶部
-**问题描述：**
+#### 1.1. ScrollView 显示不在顶部
+**问题描述**
+
 　　ScrollView 的内容超过了一页，子 View 是 LinearLayout，LinearLayout 包含 3 个子 View：TextView,TextView 和 EditText。而 EditText 的内容是固定的，所以 ScrollView 的内容就有可能超出一页。而在显示时，ScrollView 就是显示在中间，并没有从顶部显示。
 
-**问题解决：**
+**问题解决**
+
 　　这个问题造成的主要原因是因为 EditText 获取了焦点，导致界面会直接显示在焦点的位置，所以 ScrollView 就没有从顶部显示。
 
 　　解决方法也很简单，就是清除 EditText 的焦点，让 LinearLayout 的第一个 View ，也就是 TextView 获取焦点。
-```
-			editText.clearFocus();
-            textView.setFocusable(true);
-            textView.setFocusableInTouchMode(true);
-            textView.requestFocus();
+```java
+editText.clearFocus();
+textView.setFocusable(true);
+textView.setFocusableInTouchMode(true);
+textView.requestFocus();
 ```
 
 　　还有一种 ScrollView 不显示在顶部的情况就是第一次显示之后滑动了界面，再次打开，界面会停留在上一次滑动后的位置，这个时候只需要在显示界面的时候将 ScrollView 滚动到顶部即可：
-```
-	  scorllView.scrollTo(0, 0);
+```java
+scorllView.scrollTo(0, 0);
 ```
 
-## View
 
-#### 1. performClick() 方法
 
 
