整理设计模式

--- a/DataStructureAndAlgorithms/关于数据结构与算法的常见问题.md
+++ b/DataStructureAndAlgorithms/关于数据结构与算法的常见问题.md
@@ -1,6 +1,4 @@
-# 关于数据结构的常见面试题，大家一起来看呀
-
-> 前言：本文中提到的面试题都是从网络上查询出来的，至于面试题的解答只是本人的一些看法，如果有解答不对的地方希望大家提出会留言，也欢迎留言没有提到的面试问题。
+# 关于数据结构的常见问题
 
 ## 数据结构
 
@@ -14,7 +12,8 @@
 #### 树
 1. 遍历二叉树
 2. 红黑树
-* 红黑树有啥特性？
+
+   红黑树有啥特性？
 
 3. B+树
 
