--- a/DesignPatterns/代理模式.md
+++ b/DesignPatterns/代理模式.md
@@ -14,10 +14,10 @@
 * Proxy：代理主题角色
 * RealSubject：真实主题角色
 
-![](./Proxy.jpg)
+![](image/Proxy.jpg)
 
 ## 时序图
-![](./seq_Proxy.jpg)
+![](image/seq_Proxy.jpg)
 
 ## 优点
 　　代理模式的优点：
@@ -48,7 +48,8 @@
 ## 模式扩展
 　　几种常见的代理模式：
 * 图片代理：一个很常见的代理模式的应用实例就是对大图浏览的控制。
-* 用户通过浏览器访问网页时先不加载真实的大图，而是通过代理对象的方法来进行处理，在代理对象的方法中，先使用一个线程向客户端浏览器加载一个小图片，然后在后台使用另一个线程来调用大图片的加载方法将大图片加载到客户端。当需要浏览大图片时，再将大图片在新网页中显示。如果用户在浏览大图时加载工作还没有完成，可以再启动一个线程来显示相应的提示信息。通过代理技术结合多线程编程将真实图片的加载放到后台来操作，不影响前台图片的浏览。
+
+  用户通过浏览器访问网页时先不加载真实的大图，而是通过代理对象的方法来进行处理，在代理对象的方法中，先使用一个线程向客户端浏览器加载一个小图片，然后在后台使用另一个线程来调用大图片的加载方法将大图片加载到客户端。当需要浏览大图片时，再将大图片在新网页中显示。如果用户在浏览大图时加载工作还没有完成，可以再启动一个线程来显示相应的提示信息。通过代理技术结合多线程编程将真实图片的加载放到后台来操作，不影响前台图片的浏览。
 * 远程代理：远程代理可以将网络的细节隐藏起来，使得客户端不必考虑网络的存在。客户完全可以认为被代理的远程业务对象是局域的而不是远程的，而远程代理对象承担了大部分的网络通信工作。
 * 虚拟代理：当一个对象的加载非常耗费资源的时候，虚拟代理的优势就非常明显地体现出来了。虚拟代理模式是一种内存节省技术，那些占用大量内存或处理复杂的对象将推迟到使用它的时候才创建。
 
