--- a/DesignPatterns/适配器模式/适配器模式.md
+++ b/DesignPatterns/适配器模式/适配器模式.md
@@ -24,13 +24,13 @@
 　　适配器模式有对象适配器和类适配器两种实现：
 
 　　对象适配器：
-![](./对象适配器.jpg)
+![](image/对象适配器.jpg)
 
 　　类适配器：
-![](./Adapter_classModel.jpg)
+![](image/Adapter_classModel.jpg)
 
 ## 时序图
-![](./seq_Adapter.jpg)
+![](image/seq_Adapter.jpg)
 
 ## 优点
 * 将目标类和适配者类解耦，通过引入一个适配器类来重现现有的适配者类，而无须修改原有代码。
