整理设计模式与读书笔记

--- a/DesignPatterns/工厂模式/工厂方法模式.md
+++ b/DesignPatterns/工厂模式/工厂方法模式.md
@@ -30,11 +30,11 @@
 
 　　结构图：
 
-![](./loger.jpg)
+![](image/loger.jpg)
 
 　　时序图：
 
-![](./seq_loger.jpg)
+![](image/seq_loger.jpg)
 
 ## 工厂方法模式的优点
 * 在工厂方法模式中，工厂方法用来创建客户所需要的产品，同时还向客户隐藏了哪种具体产品类将被实例化这一细节，用户只需要关心所需产品对应的工厂，无需关心创建细节，甚至无须知道具体产品类的类名。
