--- a/DesignPatterns/工厂模式/抽象工厂模式.md
+++ b/DesignPatterns/工厂模式/抽象工厂模式.md
@@ -20,11 +20,11 @@
 * AbstractProduct：抽象产品
 * Product：具体产品
 
-![](./AbatractFactory.jpg)
+![](image/AbatractFactory.jpg)
 
 ## 时序图
 
-![](./seq_AbatractFactory.jpg)
+![](image/seq_AbatractFactory.jpg)
 
 ## 优点
 * 抽象工厂模式隔离了具体类的生成，使得客户并不需要知道什么被创建。由于这种隔离，更换一个具体工厂就变得相对容易。所有的具体工厂都实现了抽象工厂中定义的那些公共接口，因此只需改变具体工厂的实例，就可以在某种程度上改变整个软件系统的行为。另外，应用抽象工厂模式可以实现高内聚低耦合的设计目的，因此抽象工厂模式得到了广泛的应用。
